force-app/main/default/objects/Audit_Log__c/fields/Action_c__c.field-meta.xml
<CustomField>
    <fullName>Action_c__c</fullName>
    <label>Action_c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>