force-app/main/default/objects/Audit_Log__c/fields/New_Value_c__c.field-meta.xml
<CustomField>
    <fullName>New_Value_c__c</fullName>
    <label>New_Value_c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>