force-app/main/default/objects/Audit_Log__c/fields/Object_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Object_Name_c__c</fullName>
    <label>Object_Name_c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>