force-app/main/default/objects/Audit_Log__c/fields/Old_value_c__c.field-meta.xml
<CustomField>
    <fullName>Old_value_c__c</fullName>
    <label>Old_value_c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>