force-app/main/default/objects/Audit_Log__c/fields/User_c__c.field-meta.xml
<CustomField>
    <fullName>User_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User_c</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>